# painful-cpp-string-conversion

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.ZH.md  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: simdutf.cmake
encoding/: string.hpp
include/encoding/: string.hpp  string_view.hpp
include/ext/: convert.hpp  convert_windows.hpp  string.hpp  string_literals_encoding_compile_time_check.hpp  string_view.hpp
test/: test.cpp  test_string.cpp
tool/: encoding-converter.cpp
